--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">E-SMS</string>
+    <string name="hint">Type phone number here</string>
+    <string name="send">Send SMS</string>
+    <string name="current">Current Location</string>
+    <string name="add">Add Contact</string>
+    <string name="contacts">Contacts - </string>
+    <string name="delete">Delete All</string>
 </resources>
